tests/test_func/bad/param_inconsistency.catala_en
```catala
declaration scope S:
  input cond content boolean
  internal f1 content decimal depends on x content integer
  output out content decimal

scope S:
  definition f1 of x under condition cond
    consequence equals decimal of (x * 2)
  definition f1 of y under condition not cond
    consequence equals y / 2
  definition out equals f1 of 10
```

```catala-test-inline
$ catala typecheck
[ERROR] The arguments of this definition don't match the declaration.

Declared here
┌─⯈ tests/test_func/bad/param_inconsistency.catala_en:4.30-58:
└─┐
4 │   internal f1 content decimal depends on x content integer
  │                               ‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾


Mismatching definition
┌─⯈ tests/test_func/bad/param_inconsistency.catala_en:10.16-20:
└──┐
10 │   definition f1 of y under condition not cond
   │                 ‾‾‾‾

#return code 255#
```
